--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             SISWA BERPRESTASI, UNGGUL, DAN TERAMPIL.
         </p>
         <p>
-            <a href="https://rimuruone.github.io/rimuruone/" class="pure-button pure-button-primary">GALERI</a>
+            <a href="index2.html" class="pure-button pure-button-primary">GALERI</a>
         </p>
     </div>
 </div>
