--- a/index2.html
+++ b/index2.html
@@ -41,8 +41,8 @@
             />
           </a>
 
-        <div class="text-box pure-u-1 pure-u-md-1-2 pure-u-lg-2-3">
-          <div class="l-box">
+        <div class="pure-g">
+          <div class="3-box">
             <h1 class="text-box-head">Photos from around the world</h1>
             <p class="text-box-subhead">
               A collection of beautiful photos gathered from Unsplash.com.
