--- a/index2.html
+++ b/index2.html
@@ -60,7 +60,7 @@
             />
           </a>
 
-          <aside class="photo-box-caption">
+          <aside class="photo">
             <span>
               At
               <a
@@ -71,7 +71,7 @@
           </aside>
         </div>
 
-        <div class="photo-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+        <div class="photo">
           <a href="http://www.nilssonlee.se/">
             <img
               src="https://i.ibb.co/WGzgKk2/IMG20211126141049.jpg"
@@ -86,7 +86,7 @@
           </aside>
         </div>
 
-        <div class="photo-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+        <div class="photo">
           <a href="http://www.flickr.com/photos/rulasibai/">
             <img
               src="https://i.ibb.co/NCzcqCF/IMG20211125095107.jpg"
