--- a/index3.html
+++ b/index3.html
@@ -29,15 +29,15 @@
                     <a href="#" class="pure-menu-link">Services</a>
                 </li>
 
-                <li class="pure-menu-item"><a href="#contact" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="#contact" class="pure-menu-link">Menu</a></li>
             </ul>
         </div>
     </div>
 
     <div id="main">
         <div class="header">
-            <h1>Galeri</h1>
-            <h2>Beberapa pilihan gambar yang tersedia</h2>
+            <h1>Menu</h1>
+            <h2>Silahkan melihat gambar yang tersedia</h2>
         </div>
 
         <div class="content">
