--- a/index3.html
+++ b/index3.html
@@ -19,17 +19,17 @@
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="#company">Company</a>
+            <a class="pure-menu-heading" href="index.html">Company</a>
 
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="#home" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#about" class="pure-menu-link">About</a></li>
+                <li class="pure-menu-item"><a href="home.html" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
 
                 <li class="pure-menu-item menu-item-divided pure-menu-selected">
-                    <a href="#" class="pure-menu-link">Services</a>
+                    <a href="services.html" class="pure-menu-link">Services</a>
                 </li>
 
-                <li class="pure-menu-item"><a href="#contact" class="pure-menu-link">Menu</a></li>
+                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Menu</a></li>
             </ul>
         </div>
     </div>
