--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
     <title>Responsive Side Menu &ndash; Layout Examples &ndash; Pure</title>
-    <link rel="stylesheet" href="/css/pure/pure-min.css">
+    <link rel="stylesheet" href="style3.css">
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
